1) Merged Sachetto changes since 04/06/2020
    - New build using shell-script
    - GPU-CG
    - ODE adaptative
    - Save activation_time and APD on ".acm"
 
2) Lucas improvements
    - Organize the example_configs folder in categories
    - Add Fedora build options to the "build.sh"
    