@@ -1,0 +1,66 @@
+# ===================================================================================
+# Author: Lucas Berg
+# Description: Example that shows two branches which had different conductivities.
+# ====================================================================================
+[main]
+num_threads=6
+dt_pde=0.02
+simulation_time=300.0
+abort_on_no_activity=false
+use_adaptivity=false
+
+[update_monodomain]
+main_function=update_monodomain_default
+
+[save_result]
+print_rate=50
+output_dir=./outputs/purkinje_different_conduction
+main_function=save_as_vtp_purkinje
+remove_older_simulation=true
+save_pvd=true
+file_prefix=V
+binary=false
+compress=false
+
+[assembly_matrix]
+init_function=set_initial_conditions_fvm
+sigma_x=0.0000176
+sigma_y=0.0001334
+sigma_z=0.0000176
+library_file=shared_libs/libpurkinje_matrix_assembly.so
+main_function=purkinje_fibers_assembly_matrix
+
+[linear_system_solver]
+tolerance=1e-16
+use_preconditioner=yes
+use_gpu=no 
+max_iterations=200
+library_file=shared_libs/libdefault_linear_system_solver.so
+main_function=conjugate_gradient
+
+[alg]
+refinement_bound = 0.11
+derefinement_bound = 0.10
+refine_each = 1
+derefine_each = 1
+
+[purkinje]
+name=Simple Purkinje
+start_discretization=100.0		
+library_file=shared_libs/libdefault_purkinje.so
+main_function=initialize_purkinje_with_custom_mesh
+network_file=networks/02_Advanced/his_bundle_malfunction.vtk
+
+[ode_solver]
+dt=0.02
+use_gpu=no
+gpu_id=0
+library_file=shared_libs/libfhn_mod.so
+
+[purkinje_stim_his]
+start = 0.0
+duration = 2.0
+current = 1.0
+x_limit = 500.0
+main_function = stim_if_x_less_than
+
