@@ -1,0 +1,20 @@
+# vtk DataFile Version 3.0
+Purkinje
+ASCII
+DATASET POLYDATA
+POINTS 4 float
+0.0000000000 0.0000000000 0.0000000000
+10000.0000000000 0.0000000000 0.0000000000
+20000.0000000000 10000.0000000000 0.0000000000
+20000.0000000000 -10000.0000000000 0.0000000000
+LINES 3 9
+2 0 1
+2 1 2
+2 1 3
+POINT_DATA 4
+SCALARS sigma float
+LOOKUP_TABLE default
+0.0001334
+0.0001334
+0.0001334
+0.0000176
