@@ -7,6 +7,7 @@ struct graph* new_graph ()
     result->list_nodes = NULL;
     result->total_nodes = 0;
     result->total_edges = 0;
+    result->has_point_data = false;
 
     return result;
 }
@@ -58,8 +59,7 @@ void free_graph (struct graph *g)
 
 void insert_edge_graph (struct graph *g, const uint32_t id_1, const uint32_t id_2)
 {
-    assert(g);
-
+    
     struct node *n1, *n2;
 	struct edge *edge;
 	real_cpu norm;
@@ -88,12 +88,12 @@ void insert_edge_graph (struct graph *g, const uint32_t id_1, const uint32_t id_
     g->total_edges++;
 }
 
-void insert_node_graph (struct graph *g, const real_cpu pos[])
+void insert_node_graph (struct graph *g, const real_cpu pos[], const real_cpu sigma)
 {
     assert(g);
 
     struct node *tmp = g->list_nodes;
-    struct node *node = new_node(g->total_nodes++,pos);
+    struct node *node = new_node(g->total_nodes++,pos,sigma);
     // First node of the list
     if (!tmp)
     {
@@ -108,13 +108,14 @@ void insert_node_graph (struct graph *g, const real_cpu pos[])
     }
 }
 
-struct node* new_node (uint32_t id, const real_cpu pos[])
+struct node* new_node (const uint32_t id, const real_cpu pos[], const real_cpu sigma)
 {
     struct node *n = (struct node*)malloc(sizeof(struct node));
     n->id = id;
     n->x = pos[0];
     n->y = pos[1];
     n->z = pos[2];
+    n->sigma = sigma;
     n->num_edges = 0;
     n->next = NULL;
     n->list_edges = NULL;
@@ -122,11 +123,11 @@ struct node* new_node (uint32_t id, const real_cpu pos[])
     return n;
 }
 
-struct edge* new_edge (uint32_t id, real_cpu w, struct node *dest)
+struct edge* new_edge (const uint32_t id, const real_cpu size, struct node *dest)
 {
     struct edge *e = (struct edge*)malloc(sizeof(struct edge));
 	e->id = id;
-	e->w = w;
+	e->size = size;
 	e->dest = dest;
 	e->next = NULL;
 
@@ -154,11 +155,11 @@ void print_graph (struct graph *g)
     while (n != NULL)
     {
         struct edge *e = n->list_edges;
-        fprintf(stdout,"|| %d (%.3lf,%.3lf,%.3lf) ||",n->id,n->x,n->y,n->z);
+        fprintf(stdout,"|| %d (%.3lf,%.3lf,%.3lf) [%g] ||",n->id,n->x,n->y,n->z,n->sigma);
 
         while (e != NULL)
         {
-            fprintf(stdout," --> || %d %.3lf (%.3lf,%.3lf,%.3lf) ||",e->id,e->w,e->dest->x,e->dest->y,e->dest->z);
+            fprintf(stdout," --> || %d %.3lf (%.3lf,%.3lf,%.3lf) ||",e->id,e->size,e->dest->x,e->dest->y,e->dest->z);
             e = e->next;
         }
         fprintf(stdout,"\n");
@@ -167,6 +168,7 @@ void print_graph (struct graph *g)
     } 
     printf("Nodes = %u\n",g->total_nodes);
     printf("Edges = %u\n",g->total_edges);
+    printf("Has point data = %d\n",g->has_point_data);
 
 
 }
