@@ -20,6 +20,7 @@ struct node
 {
     uint32_t id;
     uint32_t num_edges;
+    real_cpu sigma;
     real_cpu x, y, z;
 
 
@@ -30,7 +31,7 @@ struct node
 struct edge
 {
     uint32_t id;
-    real_cpu w;
+    real_cpu size;
     struct edge *next;
     struct node *dest;
 };
@@ -47,13 +48,15 @@ struct graph
     real_cpu rpmj;
     real_cpu pmj_scale;
     uint32_t number_of_terminals;
+
+    bool has_point_data;
 };
 
-struct node* new_node (uint32_t id, const real_cpu pos[]);
-struct edge* new_edge (uint32_t id, real_cpu w, struct node *dest);
+struct node* new_node (uint32_t id, const real_cpu pos[], const real_cpu sigma);
+struct edge* new_edge (uint32_t id, real_cpu size, struct node *dest);
 struct graph* new_graph ();
 
-void insert_node_graph (struct graph *g, const real_cpu pos[]);
+void insert_node_graph (struct graph *g, const real_cpu pos[], const real_cpu sigma);
 void insert_edge_graph (struct graph *g, const uint32_t id_1, const uint32_t id_2);
 struct node* search_node (struct graph *g, const uint32_t id);
 
